quick fix (1 font-size)
'remboursement' was wider than screen and required horizontal scrolling
on very small screen width.

--- a/src/mrs/static/css/base-mobile.css
+++ b/src/mrs/static/css/base-mobile.css
@@ -4,7 +4,7 @@
     }
 
     section h1 {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
     .process--wrapper {
